force-app/main/default/objects/RecordingDepreciation__c/fields/ACCUMULATED_DEPRECIATION__c.field-meta.xml
<CustomField>
    <fullName>ACCUMULATED_DEPRECIATION__c</fullName>
    <formula>JanDepreciationExpense__c +  FebDepreciationExpense__c +
MarDepreciationExpense__c +
AprDepreciationExpense__c +
MayDepreciationExpense__c +
JunDepreciationExpense__c +
JulDepreciationExpense__c +
AugDepreciationExpense__c +
SepDepreciationExpense__c +
OctDepreciationExpense__c +
NovDepreciationExpense__c +
DecDepreciationExpense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACCUMULATED DEPRECIATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>