force-app/main/default/objects/RecordingDepreciation__c/fields/AprDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>AprDepreciationExpense__c</fullName>
    <label>APR DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>