force-app/main/default/objects/RecordingDepreciation__c/fields/DepreciationCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>DepreciationCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPR CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>RECORDING DEPR (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>RecordingDepreciationCredit</relationshipName>
    <type>Lookup</type>
</CustomField>