force-app/main/default/objects/RecordingDepreciation__c/fields/DepreciationExpenseID__c.field-meta.xml
<CustomField>
    <fullName>DepreciationExpenseID__c</fullName>
    <label>DEPRECIATION EXPENSE ID</label>
    <referenceTo>DepreciationExpense__c</referenceTo>
    <relationshipLabel>RECORDING DEPRECIATION</relationshipLabel>
    <relationshipName>RecordingDepreciation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>