force-app/main/default/objects/RecordingDepreciation__c/fields/FebDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>FebDepreciationExpense__c</fullName>
    <label>FEB DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>