force-app/main/default/objects/RecordingDepreciation__c/fields/JanDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>JanDepreciationExpense__c</fullName>
    <label>JAN DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>