force-app/main/default/objects/RecordingDepreciation__c/fields/JulDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>JulDepreciationExpense__c</fullName>
    <label>JUL DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>