force-app/main/default/objects/RecordingDepreciation__c/fields/JunDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>JunDepreciationExpense__c</fullName>
    <label>JUN DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>