force-app/main/default/objects/RecordingDepreciation__c/fields/MarDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>MarDepreciationExpense__c</fullName>
    <label>MAR DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>