force-app/main/default/objects/RecordingDepreciation__c/fields/NovDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>NovDepreciationExpense__c</fullName>
    <label>NOV DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>