force-app/main/default/objects/RecordingDepreciation__c/fields/OctDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>OctDepreciationExpense__c</fullName>
    <label>OCT DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>