force-app/main/default/objects/RecordingDepreciation__c/fields/RecordingDepreciationName__c.field-meta.xml
<CustomField>
    <fullName>RecordingDepreciationName__c</fullName>
    <label>RECORDING DEPRECIATION NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>