force-app/main/default/objects/RecordingDepreciation__c/fields/SepDepreciationExpense__c.field-meta.xml
<CustomField>
    <fullName>SepDepreciationExpense__c</fullName>
    <label>SEP DEPRECIATION EXPENSE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>