force-app/main/default/objects/RecordingDepreciation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RecordingDepreciationName__c</columns>
    <columns>DepreciationExpenseID__c</columns>
    <columns>DepreciationMethod__c</columns>
    <columns>DeprecationFormula__c</columns>
    <columns>Year__c</columns>
    <columns>ACCUMULATED_DEPRECIATION__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>